--- a/app01/static/css/home.css
+++ b/app01/static/css/home.css
@@ -6,43 +6,88 @@ body {
         align-items: center;
     }
 
-    .container {
-        background: white;
-        border-radius: 8px;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        padding: 20px;
-        max-width: 1000px;
-        width: 100%;
-        margin: 10px;
-    }
+.container {
+    background: white;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    max-width: 1000px;
+    width: 100%;
+    margin: 10px;
+}
 
-    .top-buttons {
-        margin: 10px 0;
-        text-align: center;
-    }
-    .top-buttons button {
-        margin: 0 5px;
-    }
+.top-buttons {
+    margin: 10px 0;
+    text-align: center;
+}
+.top-buttons button {
+    margin: 0 5px;
+}
 
-    .article-section {
-        margin-bottom: 20px;
-    }
+.article-section {
+    margin-bottom: 20px;
+}
 
-    .btn {
-        transition: background-color 0.3s, transform 0.3s;
-    }
+.btn {
+    transition: background-color 0.3s, transform 0.3s;
+}
 
-    .btn:hover {
-        background-color: #007bff;
-        color: white;
-        transform: scale(1.05);
-    }
+.btn:hover {
+    background-color: #007bff;
+    color: white;
+    transform: scale(1.05);
+}
 
-    .form-control:focus {
-        box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
-        border-color: #80bdff;
-    }
+.form-control:focus {
+    box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+    border-color: #80bdff;
+}
 .advanced-search {
     display: none;
+    margin-top: 10px;
+}
+
+.article-card {
+    border-bottom: 1px solid #eaeaea;
+    padding: 20px;
+}
+
+.article-card:hover {
+    background-color: #f9f9f9;
+}
+
+.article-title {
+    font-size: 1.8em;
+    font-weight: bold;
+    color: #2c3e50;
+}
+
+.article-title a {
+    text-decoration: none;
+    color: inherit;
+}
+
+.article-title a:hover {
+    color: #007bff;
+}
+
+.article-authors, .article-publish {
+    color: #888;
+}
+
+.article-keywords{
+    color: #FF9800;
+}
+
+.keywords{
+    display: flex;
+}
+
+.article-summary {
+    margin-top: 10px;
+    color: #333;
+}
+
+.btn-action {
     margin-top: 10px;
 }
