--- a/app01/templates/edit_article.html
+++ b/app01/templates/edit_article.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Edit Article</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <script src="/static/js/edit_article.js?version=1.0.2"></script>
+    <script src="/static/js/edit_article.js?version=1.0.3"></script>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -64,8 +64,11 @@
             <div class="form-group">
                 <label for="id_content">Category</label>
                 <div class="category-container">
-                <input type="text" class="form-control" id="id_category" name="category"  value="{{ article.category}}" readonly>
-                <button type="button" onclick="modifyCategory()" class="btn btn-primary">Modify</button>
+                <!-- 显示文本内容的不可编辑的输入框 -->
+                <input type="text" class="form-control" id="id_category_display" value="{{ article.category.name }}" readonly>
+                <!-- 实际存储数字值的隐藏输入框 -->
+                <input type="hidden" id="id_category" name="category" value="{{ article.category.id }}">
+                    <button type="button" onclick="modifyCategory()" class="btn btn-primary">Modify</button>
                 </div>
             </div>
             <div class="dropdown-container" id ="dropdown-container" style="display: none">
