--- a/app01/static/css/article.css
+++ b/app01/static/css/article.css
@@ -117,4 +117,20 @@ h1 {
     cursor: pointer;
 }
 
+.custom-content-class {
+    border: 2px solid #ccc;
+    padding: 10px;
+    border-radius: 5px;
+    background-color: #f9f9f9;
+    font-family: Arial, sans-serif;
+    font-size: 14px;
+}
 
+.django-ckeditor-widget{
+     width: 100%;
+    height: 180px;
+}
+
+#cke_1_contents{
+    height: 350px!important;
+}
