--- a/app01/templates/article_detail.html
+++ b/app01/templates/article_detail.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ article.title }}</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/static/css/article_detail.css?version=1.1.7" rel="stylesheet">
+    <link href="/static/css/article_detail.css?version=1.1.2" rel="stylesheet">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -45,8 +45,8 @@
             <p class="text-muted">Date: {{ article.publish_time }} | Author: {{ article.author }}</p>
         </div>
 
-        <div class="article-content mb-5">
-            {{ article.content|linebreaks }}
+        <div class="article-content ">
+            {{ article.content|safe }}
         </div>
 
         <div class="comments-section">
