--- a/app01/static/css/article_detail.css
+++ b/app01/static/css/article_detail.css
@@ -81,4 +81,63 @@ body {
             margin-block-start: 0em;
             margin-block-end: 0em;
         }
+/* Add this to your CSS file */
+.chat-container {
+    margin-top: 20px;
+    border: 1px solid #ccc;
+    padding: 15px;
+    border-radius: 10px;
+    background-color: #f9f9f9;
+    max-width: 700px;
+    margin: auto;
+}
+.chat-box {
+    max-height: 400px;
+    overflow-y: auto;
+    padding: 15px;
+    border: 1px solid #ccc;
+    background-color: #fff;
+    margin-bottom: 20px;
+    border-radius: 10px;
+}
+.chat-box .message {
+    margin-bottom: 20px;
+    padding: 10px 15px;
+    border-radius: 20px;
+    display: inline-block;
+    max-width: 80%;
+    word-wrap: break-word;
+}
+.chat-box .message.user {
+    background-color: #e0f7fa;
+    text-align: right;
+    align-self: flex-end;
+    color: #006064;
+}
+.chat-box .message.bot {
+    background-color: #f1f8e9;
+    text-align: left;
+    align-self: flex-start;
+    color: #33691e;
+}
+.chat-box .label {
+    display: block;
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+.input-group {
+    display: flex;
+    justify-content: space-between;
+}
+.input-group .form-control {
+    flex: 1;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+    margin-right: -1px;
+}
+.input-group .btn {
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
+}
+
 
