--- a/app01/static/css/article_detail.css
+++ b/app01/static/css/article_detail.css
@@ -88,10 +88,12 @@ body {
     padding: 15px;
     border-radius: 10px;
     background-color: #f9f9f9;
-    max-width: 700px;
-    margin: auto;
+    /*max-width: 700px;*/
+    margin: 10px;
 }
 .chat-box {
+    display: flex;
+    flex-direction: column;
     max-height: 400px;
     overflow-y: auto;
     padding: 15px;
